# RapaMediaFoundation

./: CMakeLists.txt
cmake/: RapaFindMediaFoundation.cmake
docs/: RapaMediaFoundation.uml
include/: RMFCOMObjectSharedPtr.h  RMFCaptureSettings.h  RMFCapturedImage.h  RMFCriticalSectionEnterer.h  RMFDevice.h  RMFDeviceInternals.h  RMFDeviceManager.h  RMFImage.h  RMFImageConverter.h  RMFImageFormat.h  RMFMemoryBuffer.h
samples/: CMakeLists.txt
samples/RapaMediaFoundationSimpleTest/: CMakeLists.txt  Main.cpp
samples/RapaMediaFoundationViewer/: CMakeLists.txt  Main.cpp  RMFQDeviceManagerWidget.cpp  RMFQDeviceManagerWidget.h  RMFQDeviceWidget.cpp  RMFQDeviceWidget.h  RMFQImageWidget.cpp  RMFQImageWidget.h
src/: RMFCOMObjectSharedPtr.cpp  RMFCaptureSettings.cpp  RMFCapturedImage.cpp  RMFCriticalSectionEnterer.cpp  RMFDevice.cpp  RMFDeviceInternals.cpp  RMFDeviceManager.cpp  RMFImage.cpp  RMFImageConverter.cpp  RMFImageFormat.cpp  RMFMemoryBuffer.cpp
